src/objects/Call_Record__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <picklist>
            <controllingField>Product__c</controllingField>
            <picklistValues>
                <fullName>CRM - 10/10/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - 8F ICD Lead Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - AF MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Allure Quad Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Assurity, ASSERT Trial Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Assurity/Accent MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Assurity Launch Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Durata Lead Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Heart Failure Market Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HF Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HRS 2014 Quartet Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HV MRI Ready - AU Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HV MRI Ready-CE Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - HV SPIFF Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Improved Patient Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Merlin @ Home Priv Reimburse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Merlin Conduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM  - Merlin on Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MORE CRT MPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MPP 12 Month Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MPP Launch Patient Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MPP Launch QRS Width</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MRI Ready NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MRI Status Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - MRI Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - NZ launch of Assurity MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Optisure Hazard Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Optisure Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Completed__c</fullName>
        <label>Case Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Notes__c</fullName>
        <label>Case Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <controllingField>Procedure__c</controllingField>
            <picklistValues>
                <fullName>New Implant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_1_Date__c</fullName>
        <label>Cert Proc 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_1_Device_Deployed__c</fullName>
        <label>Cert Proc 1 Device Deployed</label>
        <picklist>
            <controllingField>Product_to_be_certified__c</controllingField>
            <picklistValues>
                <fullName>6F Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6F STS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F STS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6F VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femoseal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_1_Device_Lot__c</fullName>
        <label>Cert Proc 1 Device Lot #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_1_Procedure__c</fullName>
        <label>Cert Proc 1 Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_1_Puncture_Site__c</fullName>
        <label>Cert Proc 1 Puncture Site</label>
        <picklist>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_1_Sheath_Size__c</fullName>
        <label>Cert Proc 1 Sheath Size</label>
        <picklist>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_2_Device_Deployed__c</fullName>
        <label>Cert Proc 2 Device Deployed</label>
        <picklist>
            <controllingField>Product_to_be_certified__c</controllingField>
            <picklistValues>
                <fullName>6F Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6F STS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F STS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6F VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femoseal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_2_Device_Lot__c</fullName>
        <label>Cert Proc 2 Device Lot #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_2_Procedure__c</fullName>
        <label>Cert Proc 2 Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_2_Puncture_Site__c</fullName>
        <label>Cert Proc 2 Puncture Site</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_2_Sheath_Size__c</fullName>
        <label>Cert Proc 2 Sheath Size</label>
        <picklist>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_3_Device_Deployed__c</fullName>
        <label>Cert Proc 3 Device Deployed</label>
        <picklist>
            <controllingField>Product_to_be_certified__c</controllingField>
            <picklistValues>
                <fullName>6F Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6F STS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F STS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6F VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femoseal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_3_Device_Lot__c</fullName>
        <label>Cert Proc 3 Device Lot #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_3_Procedure__c</fullName>
        <label>Cert Proc 3 Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_3_Puncture_Site__c</fullName>
        <label>Cert Proc 3 Puncture Site</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Proc_3_Sheath_Size__c</fullName>
        <label>Cert Proc 3 Sheath Size</label>
        <picklist>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cert_Procedure_2_Date__c</fullName>
        <label>Cert Procedure 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Procedure_3_Date__c</fullName>
        <label>Cert Procedure 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Procedure_4_Date__c</fullName>
        <label>Cert Procedure 4 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Complete__c</fullName>
        <label>Certificate Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certification_Process_Explained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Process Explained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_comments__c</fullName>
        <label>Certification comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certification_type__c</fullName>
        <inlineHelpText>If you select &quot;Re-Certification&quot; you will only need to complete 2 certification procedures before completing the certification.  If you select &quot;Certification&quot; you will need to complete the full number of certification procedures for that product.</inlineHelpText>
        <label>Certification type</label>
        <picklist>
            <picklistValues>
                <fullName>Certification</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Certification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_in_Patient_Reported_Q_of_L__c</fullName>
        <label>Change in Patient Reported Q of L</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_Notes__c</fullName>
        <label>Check Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Clinic_Notes__c</fullName>
        <label>Clinic Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coaching_Objectives__c</fullName>
        <label>Coaching Objectives</label>
        <length>10768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coaching_Session__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Coaching Session</label>
        <referenceTo>Coaching_Session__c</referenceTo>
        <relationshipLabel>Call Records</relationshipLabel>
        <relationshipName>Call_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Records - Practitioners</relationshipLabel>
        <relationshipName>Call_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Practice__c</fullName>
        <label>Current Practice</label>
        <picklist>
            <picklistValues>
                <fullName>Not Referring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermittent Referrer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Referrer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Commitment__c</fullName>
        <label>Customer Commitment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Discussion__c</fullName>
        <label>Customer Discussion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Usual_Brand_Preference__c</fullName>
        <inlineHelpText>Only select SJM if customer uses SJM products in &gt;40% of this type of procedure.</inlineHelpText>
        <label>Customer Usual Brand Preference</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELA Sorin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBS_of_Patients__c</fullName>
        <label>DBS # of Patients</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Certification_completed__c</fullName>
        <label>Date Certification completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Call__c</fullName>
        <label>Date/Time of Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_Check_Product_Type__c</fullName>
        <label>Device Check - Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_Demonstration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1. Locate the artery
2. Set the anchor
3. Seal the puncture</inlineHelpText>
        <label>Device Demonstration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Experience_variables__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1. Shuttling/Pullout	
 2. Collagen above the skin	
 3. Collagen deposition	
 4. Suture jam or breakage	
 5. Non deployment</inlineHelpText>
        <label>Device Experience variables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_CS_Electrodes__c</fullName>
        <label>Diag Cath CS Electrodes</label>
        <picklist>
            <picklistValues>
                <fullName>2～5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6～19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20～39</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_CS_Resterilised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag Cath CS Resterilised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_CS_Type__c</fullName>
        <label>Diag Cath CS Type</label>
        <picklist>
            <picklistValues>
                <fullName>Steerable - LiveWire MG Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steerable - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_HIS_Company__c</fullName>
        <label>Diag Cath HIS Company</label>
        <picklist>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_HIS_Electrodes__c</fullName>
        <label>Diag Cath HIS Electrodes</label>
        <picklist>
            <picklistValues>
                <fullName>2～5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6～19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20～39</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_HIS_Resterilised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag Cath HIS Resterilised?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_HIS_Type__c</fullName>
        <label>Diag Cath HIS Type</label>
        <picklist>
            <picklistValues>
                <fullName>Steerable - LiveWire MG Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steerable - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_HRA_Company__c</fullName>
        <label>Diag Cath HRA Company</label>
        <picklist>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_HRA_Electrodes__c</fullName>
        <label>Diag Cath HRA Electrodes</label>
        <picklist>
            <picklistValues>
                <fullName>2～5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6～19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20～39</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_HRA_Resterilised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag Cath HRA Resterilised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_HRA_Type__c</fullName>
        <label>Diag Cath HRA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Steerable - LiveWire MG Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steerable - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV1_Electrodes__c</fullName>
        <label>Diag Cath PV1 Electrodes</label>
        <picklist>
            <picklistValues>
                <fullName>2～5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6～19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20～39</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV1_Type__c</fullName>
        <label>Diag Cath PV1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Loop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV2_Company__c</fullName>
        <label>Diag Cath PV2 Company</label>
        <picklist>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV2_Electrodes__c</fullName>
        <label>Diag Cath PV2 Electrodes</label>
        <picklist>
            <picklistValues>
                <fullName>2～5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6～19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20～39</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV2_Resterilised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag Cath PV2 Resterilised?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV2_Type__c</fullName>
        <label>Diag Cath PV2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Loop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV3_Company__c</fullName>
        <label>Diag Cath PV3 Company</label>
        <picklist>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV3_Electrodes__c</fullName>
        <label>Diag Cath PV3 Electrodes</label>
        <picklist>
            <picklistValues>
                <fullName>2～5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6～19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20～39</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV3_Resterilised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag Cath PV3 Resterilised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_PV3_Type__c</fullName>
        <label>Diag Cath PV3 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Loop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_RV_Company__c</fullName>
        <label>Diag Cath RV Company</label>
        <picklist>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_RV_Electrodes__c</fullName>
        <label>Diag Cath RV Electrodes</label>
        <picklist>
            <picklistValues>
                <fullName>2～5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6～19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20～39</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_RV_Resterilised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag Cath RV Resterilised?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diag_Cath_RV_Type__c</fullName>
        <label>Diag Cath RV Type</label>
        <picklist>
            <picklistValues>
                <fullName>Steerable - LiveWire MG Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steerable - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Catheters__c</fullName>
        <label>Diagnostic Catheters</label>
        <picklist>
            <controllingField>Mapping_Type__c</controllingField>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>